k8s/platform/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranch-api
  namespace: platform
spec:
  selector:
    app: ranch-api
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
